worker/where.peg.js
var Parser = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = null,
        peg$c2 = [],
        peg$c3 = function() {return "number"},
        peg$c4 = /^[ \t\n\r]/,
        peg$c5 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c6 = "-",
        peg$c7 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c8 = "+",
        peg$c9 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c10 = "~",
        peg$c11 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c12 = "||",
        peg$c13 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c14 = "*",
        peg$c15 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c16 = "/",
        peg$c17 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c18 = "%",
        peg$c19 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c20 = "<<",
        peg$c21 = { type: "literal", value: "<<", description: "\"<<\"" },
        peg$c22 = ">>",
        peg$c23 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c24 = "&",
        peg$c25 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c26 = "|",
        peg$c27 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c28 = "<=",
        peg$c29 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c30 = ">=",
        peg$c31 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c32 = "<",
        peg$c33 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c34 = ">",
        peg$c35 = { type: "literal", value: ">", description: "\">\"" },
        peg$c36 = "=",
        peg$c37 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c38 = "==",
        peg$c39 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c40 = "!=",
        peg$c41 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c42 = "<>",
        peg$c43 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c44 = /^[oO]/,
        peg$c45 = { type: "class", value: "[oO]", description: "[oO]" },
        peg$c46 = /^[rR]/,
        peg$c47 = { type: "class", value: "[rR]", description: "[rR]" },
        peg$c48 = function() { return "op" },
        peg$c49 = /^[0-9]/,
        peg$c50 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c51 = /^[A-Za-z0-9_]/,
        peg$c52 = { type: "class", value: "[A-Za-z0-9_]", description: "[A-Za-z0-9_]" },
        peg$c53 = function() {return "name"},
        peg$c54 = ".",
        peg$c55 = { type: "literal", value: ".", description: "\".\"" },
        peg$c56 = ",",
        peg$c57 = { type: "literal", value: ",", description: "\",\"" },
        peg$c58 = "(",
        peg$c59 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c60 = ")",
        peg$c61 = { type: "literal", value: ")", description: "\")\"" },
        peg$c62 = "\"",
        peg$c63 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c64 = /^[^"]/,
        peg$c65 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c66 = function() {return "str"},
        peg$c67 = "'",
        peg$c68 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c69 = /^[^']/,
        peg$c70 = { type: "class", value: "[^']", description: "[^']" },
        peg$c71 = /^[aA]/,
        peg$c72 = { type: "class", value: "[aA]", description: "[aA]" },
        peg$c73 = /^[nN]/,
        peg$c74 = { type: "class", value: "[nN]", description: "[nN]" },
        peg$c75 = /^[dD]/,
        peg$c76 = { type: "class", value: "[dD]", description: "[dD]" },
        peg$c77 = function() {return 0},
        peg$c78 = /^[iI]/,
        peg$c79 = { type: "class", value: "[iI]", description: "[iI]" },
        peg$c80 = /^[sS]/,
        peg$c81 = { type: "class", value: "[sS]", description: "[sS]" },
        peg$c82 = function() {return 3},
        peg$c83 = /^[eE]/,
        peg$c84 = { type: "class", value: "[eE]", description: "[eE]" },
        peg$c85 = /^[gG]/,
        peg$c86 = { type: "class", value: "[gG]", description: "[gG]" },
        peg$c87 = /^[xX]/,
        peg$c88 = { type: "class", value: "[xX]", description: "[xX]" },
        peg$c89 = /^[pX]/,
        peg$c90 = { type: "class", value: "[pX]", description: "[pX]" },
        peg$c91 = /^[lL]/,
        peg$c92 = { type: "class", value: "[lL]", description: "[lL]" },
        peg$c93 = /^[kK]/,
        peg$c94 = { type: "class", value: "[kK]", description: "[kK]" },
        peg$c95 = /^[mM]/,
        peg$c96 = { type: "class", value: "[mM]", description: "[mM]" },
        peg$c97 = /^[tT]/,
        peg$c98 = { type: "class", value: "[tT]", description: "[tT]" },
        peg$c99 = /^[cC]/,
        peg$c100 = { type: "class", value: "[cC]", description: "[cC]" },
        peg$c101 = /^[hH]/,
        peg$c102 = { type: "class", value: "[hH]", description: "[hH]" },
        peg$c103 = /^[uU]/,
        peg$c104 = { type: "class", value: "[uU]", description: "[uU]" },
        peg$c105 = function() {return 1},
        peg$c106 = function() {return 2},
        peg$c107 = /^[bB]/,
        peg$c108 = { type: "class", value: "[bB]", description: "[bB]" },
        peg$c109 = /^[wW]/,
        peg$c110 = { type: "class", value: "[wW]", description: "[wW]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseexpr();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsewhitespace();
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsevalue() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parsewhitespace();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseliteral_value();
        if (s2 === peg$FAILED) {
          s2 = peg$parsename();
          if (s2 === peg$FAILED) {
            s2 = peg$currPos;
            s3 = peg$parseunary_operator();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseexpr();
              if (s4 !== peg$FAILED) {
                s3 = [s3, s4];
                s2 = s3;
              } else {
                peg$currPos = s2;
                s2 = peg$c0;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
            if (s2 === peg$FAILED) {
              s2 = peg$currPos;
              s3 = peg$parsewhitespace();
              if (s3 !== peg$FAILED) {
                s4 = peg$parselparen();
                if (s4 !== peg$FAILED) {
                  s5 = peg$parseexpr();
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parsewhitespace();
                    if (s6 !== peg$FAILED) {
                      s7 = peg$parserparen();
                      if (s7 !== peg$FAILED) {
                        s3 = [s3, s4, s5, s6, s7];
                        s2 = s3;
                      } else {
                        peg$currPos = s2;
                        s2 = peg$c0;
                      }
                    } else {
                      peg$currPos = s2;
                      s2 = peg$c0;
                    }
                  } else {
                    peg$currPos = s2;
                    s2 = peg$c0;
                  }
                } else {
                  peg$currPos = s2;
                  s2 = peg$c0;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$c0;
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseexpr() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

      s0 = peg$currPos;
      s1 = peg$parsewhitespace();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parsevalue();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsebinary_operator();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseexpr();
            if (s5 !== peg$FAILED) {
              s3 = [s3, s4, s5];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
        if (s2 === peg$FAILED) {
          s2 = peg$currPos;
          s3 = peg$parsevalue();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNOT();
            if (s4 === peg$FAILED) {
              s4 = peg$c1;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsewhitespace1();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseLIKE();
                if (s6 === peg$FAILED) {
                  s6 = peg$parseREGEXP();
                  if (s6 === peg$FAILED) {
                    s6 = peg$parseMATCH();
                  }
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseexpr();
                  if (s7 !== peg$FAILED) {
                    s3 = [s3, s4, s5, s6, s7];
                    s2 = s3;
                  } else {
                    peg$currPos = s2;
                    s2 = peg$c0;
                  }
                } else {
                  peg$currPos = s2;
                  s2 = peg$c0;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$c0;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
          if (s2 === peg$FAILED) {
            s2 = peg$currPos;
            s3 = peg$parsevalue();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseISNULL();
              if (s4 === peg$FAILED) {
                s4 = peg$parseNOTNULL();
                if (s4 === peg$FAILED) {
                  s4 = peg$currPos;
                  s5 = peg$parseNOT();
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parseNULL();
                    if (s6 !== peg$FAILED) {
                      s5 = [s5, s6];
                      s4 = s5;
                    } else {
                      peg$currPos = s4;
                      s4 = peg$c0;
                    }
                  } else {
                    peg$currPos = s4;
                    s4 = peg$c0;
                  }
                }
              }
              if (s4 !== peg$FAILED) {
                s3 = [s3, s4];
                s2 = s3;
              } else {
                peg$currPos = s2;
                s2 = peg$c0;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
            if (s2 === peg$FAILED) {
              s2 = peg$currPos;
              s3 = peg$parsevalue();
              if (s3 !== peg$FAILED) {
                s4 = peg$parsewhitespace1();
                if (s4 !== peg$FAILED) {
                  s5 = peg$parseIS();
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parseNOT();
                    if (s6 === peg$FAILED) {
                      s6 = peg$c1;
                    }
                    if (s6 !== peg$FAILED) {
                      s7 = peg$parseexpr();
                      if (s7 !== peg$FAILED) {
                        s3 = [s3, s4, s5, s6, s7];
                        s2 = s3;
                      } else {
                        peg$currPos = s2;
                        s2 = peg$c0;
                      }
                    } else {
                      peg$currPos = s2;
                      s2 = peg$c0;
                    }
                  } else {
                    peg$currPos = s2;
                    s2 = peg$c0;
                  }
                } else {
                  peg$currPos = s2;
                  s2 = peg$c0;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$c0;
              }
              if (s2 === peg$FAILED) {
                s2 = peg$currPos;
                s3 = peg$parsevalue();
                if (s3 !== peg$FAILED) {
                  s4 = peg$parseNOT();
                  if (s4 === peg$FAILED) {
                    s4 = peg$c1;
                  }
                  if (s4 !== peg$FAILED) {
                    s5 = peg$parseBETWEEN();
                    if (s5 !== peg$FAILED) {
                      s6 = peg$parseexpr();
                      if (s6 !== peg$FAILED) {
                        s7 = peg$parsewhitespace1();
                        if (s7 !== peg$FAILED) {
                          s8 = peg$parseAND();
                          if (s8 !== peg$FAILED) {
                            s9 = peg$parseexpr();
                            if (s9 !== peg$FAILED) {
                              s3 = [s3, s4, s5, s6, s7, s8, s9];
                              s2 = s3;
                            } else {
                              peg$currPos = s2;
                              s2 = peg$c0;
                            }
                          } else {
                            peg$currPos = s2;
                            s2 = peg$c0;
                          }
                        } else {
                          peg$currPos = s2;
                          s2 = peg$c0;
                        }
                      } else {
                        peg$currPos = s2;
                        s2 = peg$c0;
                      }
                    } else {
                      peg$currPos = s2;
                      s2 = peg$c0;
                    }
                  } else {
                    peg$currPos = s2;
                    s2 = peg$c0;
                  }
                } else {
                  peg$currPos = s2;
                  s2 = peg$c0;
                }
                if (s2 === peg$FAILED) {
                  s2 = peg$currPos;
                  s3 = peg$parsevalue();
                  if (s3 !== peg$FAILED) {
                    s4 = peg$parseNOT();
                    if (s4 === peg$FAILED) {
                      s4 = peg$c1;
                    }
                    if (s4 !== peg$FAILED) {
                      s5 = peg$parsewhitespace1();
                      if (s5 !== peg$FAILED) {
                        s6 = peg$parseIN();
                        if (s6 !== peg$FAILED) {
                          s7 = peg$currPos;
                          s8 = peg$parselparen();
                          if (s8 !== peg$FAILED) {
                            s9 = [];
                            s10 = peg$currPos;
                            s11 = peg$parseexpr();
                            if (s11 !== peg$FAILED) {
                              s12 = peg$parsecomma();
                              if (s12 !== peg$FAILED) {
                                s11 = [s11, s12];
                                s10 = s11;
                              } else {
                                peg$currPos = s10;
                                s10 = peg$c0;
                              }
                            } else {
                              peg$currPos = s10;
                              s10 = peg$c0;
                            }
                            if (s10 !== peg$FAILED) {
                              while (s10 !== peg$FAILED) {
                                s9.push(s10);
                                s10 = peg$currPos;
                                s11 = peg$parseexpr();
                                if (s11 !== peg$FAILED) {
                                  s12 = peg$parsecomma();
                                  if (s12 !== peg$FAILED) {
                                    s11 = [s11, s12];
                                    s10 = s11;
                                  } else {
                                    peg$currPos = s10;
                                    s10 = peg$c0;
                                  }
                                } else {
                                  peg$currPos = s10;
                                  s10 = peg$c0;
                                }
                              }
                            } else {
                              s9 = peg$c0;
                            }
                            if (s9 === peg$FAILED) {
                              s9 = peg$c1;
                            }
                            if (s9 !== peg$FAILED) {
                              s10 = peg$parserparen();
                              if (s10 !== peg$FAILED) {
                                s8 = [s8, s9, s10];
                                s7 = s8;
                              } else {
                                peg$currPos = s7;
                                s7 = peg$c0;
                              }
                            } else {
                              peg$currPos = s7;
                              s7 = peg$c0;
                            }
                          } else {
                            peg$currPos = s7;
                            s7 = peg$c0;
                          }
                          if (s7 !== peg$FAILED) {
                            s3 = [s3, s4, s5, s6, s7];
                            s2 = s3;
                          } else {
                            peg$currPos = s2;
                            s2 = peg$c0;
                          }
                        } else {
                          peg$currPos = s2;
                          s2 = peg$c0;
                        }
                      } else {
                        peg$currPos = s2;
                        s2 = peg$c0;
                      }
                    } else {
                      peg$currPos = s2;
                      s2 = peg$c0;
                    }
                  } else {
                    peg$currPos = s2;
                    s2 = peg$c0;
                  }
                  if (s2 === peg$FAILED) {
                    s2 = peg$parsevalue();
                  }
                }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseliteral_value() {
      var s0;

      s0 = peg$parsenumeric_literal();
      if (s0 === peg$FAILED) {
        s0 = peg$parsestring_literal();
        if (s0 === peg$FAILED) {
          s0 = peg$parsestring_literal2();
          if (s0 === peg$FAILED) {
            s0 = peg$parseNULL();
          }
        }
      }

      return s0;
    }

    function peg$parsenumeric_literal() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = [];
      s3 = peg$parsedigit();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsedigit();
        }
      } else {
        s2 = peg$c0;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parsedot();
        if (s4 !== peg$FAILED) {
          s5 = [];
          s6 = peg$parsedigit();
          if (s6 !== peg$FAILED) {
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parsedigit();
            }
          } else {
            s5 = peg$c0;
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$c0;
        }
        if (s3 === peg$FAILED) {
          s3 = peg$c1;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c0;
      }
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        s2 = peg$parsedot();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsedigit();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parsedigit();
            }
          } else {
            s3 = peg$c0;
          }
          if (s3 !== peg$FAILED) {
            s2 = [s2, s3];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c3();
      }
      s0 = s1;

      return s0;
    }

    function peg$parsewhitespace() {
      var s0, s1;

      s0 = [];
      if (peg$c4.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        if (peg$c4.test(input.charAt(peg$currPos))) {
          s1 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
      }

      return s0;
    }

    function peg$parsewhitespace1() {
      var s0, s1;

      s0 = [];
      if (peg$c4.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          if (peg$c4.test(input.charAt(peg$currPos))) {
            s1 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
        }
      } else {
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseunary_operator() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsewhitespace();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 45) {
          s2 = peg$c6;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 43) {
            s2 = peg$c8;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s2 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 126) {
              s2 = peg$c10;
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s2 === peg$FAILED) {
              s2 = peg$parseNOT_NOCASE();
            }
          }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsebinary_operator() {
      var s0, s1, s2, s3, s4;
